# rmemcached

./: .gitignore  DESCRIPTION  NAMESPACE  README  README.md  configure  configure.in
R/: memcache.R
src/: Makevars.in  rmemcached.c  rmemcached.h
